--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "npmPublishTagStaging": "beta"
   },
   "dependencies": {
+    "form-data": "^2.3.3",
     "node-fetch": "^2.3.0",
     "promise-queue": "^2.2.5"
   }
