--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "form-data": "^2.3.3",
     "node-fetch": "^2.3.0",
-    "promise-queue": "^2.2.5",
-    "uuid": "^3.3.2"
+    "promise-queue": "^2.2.5"
   }
 }
