--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "dependencies": {
     "node-fetch": "^2.3.0",
     "promise-queue": "^2.2.5"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-athom": "^2.0.8"
   }
 }
