--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "concurrently \"serve build/docs/\" \"npm run build:watch\"",
-    "build": "jsdoc --configure ./docs/jsdoc.json",
+    "serve": "concurrently \"serve build/\" \"npm run build:watch\"",
+    "build": "npm run build:clean; jsdoc --configure ./docs/jsdoc.json",
     "build:clean": "rm -rf ./build",
     "build:watch": "watch \"npm run build:clean && npm run build\" lib docs \"node_modules/homey-jsdoc-template\""
   },
