--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,13 +37,18 @@ on:
     branches:
       - production
       - testing
+  workflow_dispatch:
+    inputs:
+      versionBumpType:
+        description: 'Version bump (major, minor or patch)'
+        required: true
 
 jobs:
   npm_version_bump_and_publish:
-    name: Update version and publish
+    name: Version Bump & Deploy to NPM
 
-    # Only run this job if initiator is not the Homey Github Actions Bot to prevent loops
-    if: github.actor != 'HomeyGithubActionsBot'
+    # Only run this job if initiator is not the Homey Github Actions Bot to prevent loops and if a version bump is provided
+    if: github.actor != 'HomeyGithubActionsBot' && (github.event.inputs.versionBumpType == 'patch' || github.event.inputs.versionBumpType == 'minor' || github.event.inputs.versionBumpType == 'major' || contains(github.event.head_commit.message, '#patch') || contains(github.event.head_commit.message, '#minor') || contains(github.event.head_commit.message, '#major'))
 
     runs-on: ubuntu-latest
     steps:
@@ -60,6 +65,7 @@ jobs:
         run: |
           git config --local user.email "sysadmin+githubactions@athom.com"
           git config --local user.name "Homey Github Actions Bot"
+
       # Configures a Node.js environment.
       - name: Set up node 12 environment
         uses: actions/setup-node@v1
@@ -81,23 +87,26 @@ jobs:
         run: npm ci
 
       - name: Version bump patch
-        if: "contains(github.event.head_commit.message, '#patch') && !contains(github.event.head_commit.message, '#minor') && !contains(github.event.head_commit.message, '#major')"
+        if: github.event.inputs.versionBumpType == 'patch' || contains(github.event.head_commit.message, '#patch') && !contains(github.event.head_commit.message, '#minor') && !contains(github.event.head_commit.message, '#major')
         run: |
           npm version patch
           git pull
           git push --follow-tags
+
       - name: Version bump minor
-        if: "contains(github.event.head_commit.message, '#minor') && !contains(github.event.head_commit.message, '#major')"
+        if: github.event.inputs.versionBumpType == 'minor' || contains(github.event.head_commit.message, '#minor') && !contains(github.event.head_commit.message, '#major')
         run: |
           npm version minor
           git pull
           git push --follow-tags
+
       - name: Version bump major
-        if: "contains(github.event.head_commit.message, '#major')"
+        if: github.event.inputs.versionBumpType == 'major' || contains(github.event.head_commit.message, '#major')
         run: |
           npm version major
           git pull
           git push --follow-tags
+
       # Publish when this action is running on branch production (when publishing a scoped package add --access public)
       - name: Publish
         if: github.ref == 'refs/heads/production'
