--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "lint": "eslint .",
     "serve": "concurrently \"serve build/\" \"npm run jsdoc:watch\"",
     "build": "npm ci; npm run jsdoc:clean; npm run jsdoc;",
@@ -19,14 +19,16 @@
     "npmPublishTagStaging": "beta"
   },
   "dependencies": {
-    "node-fetch": "^2.3.0",
-    "promise-queue": "^2.2.5"
+    "promise-queue": "^2.2.5",
+    "node-fetch": "^2.3.0"
   },
   "devDependencies": {
+    "@types/jest": "^28.1.1",
     "concurrently": "^5.1.0",
     "eslint": "^6.8.0",
     "eslint-config-athom": "^2.0.8",
     "homey-jsdoc-template": "github:athombv/homey-jsdoc-template#1.4",
+    "jest": "^28.1.1",
     "jsdoc": "^3.6.6",
     "jsdoc-ts-utils": "^1.1.2",
     "npm-watch": "^0.6.0",
