--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "concurrently": "^5.1.0",
     "eslint": "^6.8.0",
     "eslint-config-athom": "^2.0.8",
+    "eslint-plugin-jest": "^26.5.3",
     "homey-jsdoc-template": "github:athombv/homey-jsdoc-template#1.4",
     "jest": "^28.1.1",
     "jsdoc": "^3.6.6",
