--- a/package.json
+++ b/package.json
@@ -4,21 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
-    "serve": "concurrently \"serve build/\" \"npm run jsdoc:watch\"",
-    "build": "npm ci; npm run jsdoc:clean; npm run jsdoc;",
-    "jsdoc": "jsdoc --configure ./docs/jsdoc.json;",
-    "jsdoc:clean": "rm -rf ./build",
-    "jsdoc:watch": "watch \"npm run jsdoc:clean && npm run jsdoc\" lib docs \"node_modules/homey-jsdoc-template\""
+    "jsdoc": "jsdoc --configure ./jsdoc.json;",
+    "jsdoc:serve": "serve ./jsdoc",
+    "jsdoc:clean": "rm -rf ./jsdoc",
+    "jsdoc:watch": "watch \"npm run jsdoc:clean && npm run jsdoc\" lib docs \"node_modules/@athombv/jsdoc-template\""
   },
-  "author": "",
-  "license": "ISC",
   "config": {
     "npmPublishTagProduction": "latest",
     "npmPublishTagStaging": "beta"
   },
   "dependencies": {
+    "@athombv/jsdoc-template": "^1.6.1",
     "node-fetch": "^2.3.0"
   },
   "devDependencies": {
@@ -27,7 +25,6 @@
     "eslint": "^6.8.0",
     "eslint-config-athom": "^2.0.8",
     "eslint-plugin-jest": "^26.5.3",
-    "homey-jsdoc-template": "github:athombv/homey-jsdoc-template#1.4",
     "jest": "^28.1.1",
     "jsdoc": "^3.6.6",
     "jsdoc-ts-utils": "^1.1.2",
