--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "3.5.1",
   "description": "",
   "main": "index.js",
+  "files": [
+    "/index.js",
+    "/lib/"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint .",
